--- a/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
@@ -39,7 +39,7 @@
       }
 
       .team-coach-title {
-        font-size: 0.8em;
+        font-size: 0.8rem;
         height: 1.25rem;
       }
     }
@@ -96,7 +96,7 @@
         }
         &.header {
           > div {
-            font-size: 0.8em;
+            font-size: 0.8rem;
             font-weight: 700;
           }
 
@@ -106,7 +106,7 @@
             justify-content: center;
             align-items: center;
             mat-icon {
-              font-size: 1.2em;
+              font-size: 1.2rem;
               height: fit-content;
               left: 0;
             }
