--- a/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.scss
+++ b/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.scss
@@ -70,7 +70,7 @@
   font-weight: 500;
   color: #718096;
   text-transform: uppercase;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05rem;
   border-bottom: 1px solid #e2e8f0;
 }
 
