--- a/src/app/league-zone/league-rules-overview/league-rules/league-rules.component.scss
+++ b/src/app/league-zone/league-rules-overview/league-rules/league-rules.component.scss
@@ -125,7 +125,7 @@ $vertical-padding: var(--pdz-space-sm);
   justify-content: end;
   padding-bottom: $vertical-padding;
   mat-icon {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     height: fit-content;
     color: var(--pdz-color-secondary);
     width: fit-content;
