--- a/src/app/league-zone/league-standings/pokemon-standings/pokemon-standings.component.scss
+++ b/src/app/league-zone/league-standings/pokemon-standings/pokemon-standings.component.scss
@@ -45,7 +45,7 @@
       height: fit-content;
       overflow: hidden;
       object-fit: contain;
-      font-size: 1.2em;
+      font-size: 1.2rem;
       font-weight: 700;
       color: var(--pdz-color-primary);
       &.positive {
@@ -78,12 +78,12 @@
     align-items: center;
 
     .team-name {
-      line-height: 1em;
+      line-height: 1rem;
     }
     .coach-names {
       color: var(--pdz-color-secondary);
-      font-size: 0.8em;
-      line-height: 1em;
+      font-size: 0.8rem;
+      line-height: 1rem;
     }
   }
 
@@ -97,7 +97,7 @@
       color: var(--pdz-color-surface-container);
       text-align: center;
       font-weight: 700;
-      font-size: 0.8em;
+      font-size: 0.8rem;
       line-height: 1.5rem;
       border-radius: var(--pdz-shape-corner-xs);
       height: 1.5rem;
@@ -134,7 +134,7 @@
       height: 0.75rem;
       text-align: center;
       font-weight: 700;
-      font-size: 0.7em;
+      font-size: 0.7rem;
     }
 
     .streak {
