--- a/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.scss
@@ -45,7 +45,7 @@ h2 {
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 500;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   border-bottom: 1px solid var(--pdz-color-primary-border-variant);
   padding-bottom: 8px;
 }
@@ -62,14 +62,14 @@ h2 {
   margin-bottom: 20px;
   label {
     margin: 0;
-    font-size: 0.95em;
+    font-size: 0.95rem;
     color: rgba(0, 0, 0, 0.6);
   }
 }
 
 .abilities-section {
   h3 {
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 500;
     margin-bottom: 8px;
     color: rgba(0, 0, 0, 0.7);
