--- a/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
+++ b/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
@@ -40,7 +40,7 @@
   }
 
   span {
-    font-size: 0.9em;
+    font-size: 0.9rem;
     max-width: 200px;
     overflow: hidden;
     text-overflow: ellipsis;
