--- a/src/app/pages/news-core/news-core.component.scss
+++ b/src/app/pages/news-core/news-core.component.scss
@@ -5,7 +5,7 @@
 
 .news-header {
   font-family: var(--pdz-font-fancy);
-  font-size: 1.2em;
+  font-size: 1.2rem;
   color: var(--pdz-color-secondary);
 
   .news-date {
@@ -50,7 +50,7 @@
   align-self: center;
   .image-title {
     padding-left: 0.25rem;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     font-weight: 500;
     font-family: var(--pdz-font-fancy);
     color: var(--pdz-color-secondary);
@@ -74,13 +74,13 @@
 }
 
 .section-heading {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   font-family: var(--pdz-font-fancy);
   padding-bottom: 0rem !important;
 }
 
 .section-list {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   ul {
     padding-left: 1rem;
     list-style-type: disc;
