--- a/src/app/pages/top-navbar/login-button/login-button.component.scss
+++ b/src/app/pages/top-navbar/login-button/login-button.component.scss
@@ -18,8 +18,8 @@
     padding-left: var(--pdz-space-sm);
     max-width: 4rem;
     text-overflow: clip;
-    font-size: 0.9em;
-    line-height: 0.9em;
+    font-size: 0.9rem;
+    line-height: 0.9rem;
     overflow: hidden;
   }
 }
