--- a/src/app/planner/planner.component.scss
+++ b/src/app/planner/planner.component.scss
@@ -24,7 +24,7 @@
   }
 
   mat-icon {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     padding: 2px;
     height: fit-content;
     width: fit-content;
