--- a/src/app/planner/typechart/typechart.component.scss
+++ b/src/app/planner/typechart/typechart.component.scss
@@ -30,7 +30,7 @@
   font-weight: 700;
 
   .table-label {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-family: var(--pdz-font-fancy);
   }
 }
