--- a/src/app/tools/teambuilder/teambuilder-pokemon.component.scss
+++ b/src/app/tools/teambuilder/teambuilder-pokemon.component.scss
@@ -2,9 +2,9 @@
   display: flex;
   width: auto;
   align-items: center;
-  gap: 0.5em;
+  gap: 0.5rem;
   img {
-    height: 1em;
+    height: 1rem;
   }
 }
 
