--- a/src/styles/_mat-styles.scss
+++ b/src/styles/_mat-styles.scss
@@ -226,7 +226,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 
     .title-wrapper {
       flex-grow: 1;
@@ -269,7 +269,7 @@ body {
 
   .desc-container {
     max-width: 100%;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     word-wrap: break-word;
     white-space: normal;
   }
