--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -166,8 +166,8 @@ $option-lineheight: 3rem;
     .type-text {
       color: white;
       flex-shrink: 0;
-      font-size: 0.6em;
-      line-height: 1em;
+      font-size: 0.6rem;
+      line-height: 1rem;
       user-select: none;
       font-family: var(--pdz-font-regular);
     }
