--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
@@ -25,7 +25,7 @@
       overflow: hidden;
       padding: 0 0.25rem;
       font-weight: 700;
-      font-size: 0.7em;
+      font-size: 0.7rem;
       border: 1px solid var(--pdz-color-on-primary-container);
       background-color: var(--pdz-color-primary-subtle);
       color: var(--pdz-color-on-primary-container);
