--- a/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.scss
+++ b/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.scss
@@ -51,10 +51,10 @@
         text-align: end;
       }
       .team-name {
-        font-size: 0.7em;
+        font-size: 0.7rem;
       }
       .coach-name {
-        font-size: 0.9em;
+        font-size: 0.9rem;
         font-weight: 600;
       }
     }
@@ -73,7 +73,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       font-weight: 700;
-      font-size: 0.8em;
+      font-size: 0.8rem;
     }
     mat-icon {
       position: absolute;
@@ -92,7 +92,7 @@
     color: var(--pdz-color-primary);
     padding: 0 0.25rem;
     border-radius: var(--pdz-shape-corner-sm);
-    font-size: 0.6em;
+    font-size: 0.6rem;
     &.enabled {
       box-shadow: var(--pdz-level1);
       background-color: var(--pdz-color-primary);
@@ -124,7 +124,7 @@
         line-height: 1.25rem;
         text-align: center;
         font-weight: 700;
-        font-size: 1em;
+        font-size: 1rem;
         height: 1.25rem;
         border-radius: var(--pdz-shape-corner-xs);
         box-shadow: var(--pdz-level1);
@@ -138,7 +138,7 @@
           color: lightcoral;
         }
         mat-icon {
-          font-size: 1.2em;
+          font-size: 1.2rem;
           width: fit-content;
           line-height: 1.25rem;
         }
@@ -158,14 +158,14 @@
     flex-direction: column;
     row-gap: 0.25rem;
     .match-option {
-      font-size: 0.6em;
+      font-size: 0.6rem;
       color: var(--pdz-color-primary);
       display: flex;
       column-gap: 0.25rem;
       align-items: center;
       .match-score {
         font-weight: 600;
-        font-size: 1.2em;
+        font-size: 1.2rem;
 
         text-align: center;
         &.positive {
