--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.scss
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.scss
@@ -42,7 +42,7 @@
       .team-name {
         text-align: center;
         font-weight: 600;
-        font-size: 1.1em;
+        font-size: 1.1rem;
         margin: 0 0 0.2em 0;
       }
 
@@ -51,7 +51,7 @@
           text-align: center;
           color: var(--pdz-color-primary);
           font-weight: 600;
-          font-size: 0.8em;
+          font-size: 0.8rem;
           margin: 0;
         }
       }
@@ -62,13 +62,13 @@
 
       .team-record {
         color: var(--pdz-color-secondary);
-        font-size: 0.8em;
+        font-size: 0.8rem;
         font-weight: 600;
       }
 
       .team-timezone {
         color: var(--pdz-color-secondary);
-        font-size: 0.8em;
+        font-size: 0.8rem;
         font-weight: 600;
       }
     }
@@ -100,7 +100,7 @@
       border: 1px solid var(--pdz-color-primary);
       border-radius: var(--pdz-shape-corner-lg);
       overflow: hidden;
-      font-size: 0.8em;
+      font-size: 0.8rem;
       .roster-table {
         width: 100%;
         table-layout: fixed;
@@ -155,7 +155,7 @@
         th.col-name,
         td.cell-name {
           white-space: normal;
-          line-height: 1em;
+          line-height: 1rem;
         }
 
         tr:last-child {
