--- a/src/app/league-zone/league-tier-list/league-tier-list-form/tier-group-edit-dialog/tier-group-edit-dialog.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/tier-group-edit-dialog/tier-group-edit-dialog.component.scss
@@ -4,7 +4,7 @@ h2 {
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 500;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   border-bottom: 1px solid var(--pdz-color-primary-border-variant);
   padding-bottom: 8px;
 }
