--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,6 +1,6 @@
 .setting-title {
   font-family: var(--pdz-font-fancy);
-  font-size: 1.75em;
+  font-size: 1.75rem;
   color: var(--pdz-color-on-surface);
 }
 .setting-container {
