--- a/src/app/pages/top-navbar/top-navbar.component.scss
+++ b/src/app/pages/top-navbar/top-navbar.component.scss
@@ -49,8 +49,8 @@ mat-toolbar {
     padding-left: 0.5rem;
     max-width: 4rem;
     text-overflow: clip;
-    font-size: 0.9em;
-    line-height: 0.9em;
+    font-size: 0.9rem;
+    line-height: 0.9rem;
     overflow: hidden;
   }
 }
