--- a/src/app/tools/quick-draft copy/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft copy/quick-draft-picks/quick-draft-picks.component.scss
@@ -31,15 +31,15 @@
     height: 1.5rem;
 
     .type-text {
-      font-size: 0.8em;
-      line-height: 1.5em;
+      font-size: 0.8rem;
+      line-height: 1.5rem;
     }
   }
 }
 
 .qd-reroll {
   color: var(--pdz-color-primary);
-  font-size: 1.5em;
+  font-size: 1.5rem;
   align-items: center;
   display: flex;
   column-gap: 0;
@@ -47,11 +47,11 @@
   padding: 0 0.5rem 0 0.25rem;
 
   mat-icon {
-    font-size: 1em;
+    font-size: 1rem;
     width: fit-content;
     height: fit-content;
     &.small-icon {
-      font-size: 0.8em;
+      font-size: 0.8rem;
     }
   }
   &:hover {
@@ -119,7 +119,7 @@
   .box-title {
     width: 100%;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-family: var(--pdz-font-fancy);
     border-bottom: 2px solid var(--pdz-color-primary-border);
   }
@@ -189,7 +189,7 @@
   align-items: center;
   text-align: center;
   opacity: 0.4;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .option-breakdown {
@@ -211,7 +211,7 @@
   align-items: center;
   text-align: center;
   column-gap: 1rem;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   color: var(--pdz-color-primary);
 }
 
@@ -230,7 +230,7 @@
     align-items: center;
 
     .option-stat-name {
-      font-size: 0.7em;
+      font-size: 0.7rem;
     }
 
     .option-stat-value {
