--- a/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
@@ -50,7 +50,7 @@ h2 {
   height: 1.5rem;
 
   .type-text {
-    font-size: 0.8em;
-    line-height: 1.5em;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
   }
 }
