--- a/src/app/util/forms/team-form/team-form.component.scss
+++ b/src/app/util/forms/team-form/team-form.component.scss
@@ -250,8 +250,8 @@
         justify-content: center;
         border-radius: 4rem;
         overflow: hidden;
-        font-size: 0.8em;
-        line-height: 0.8em;
+        font-size: 0.8rem;
+        line-height: 0.8rem;
 
         mat-icon {
           margin: 0 0.125rem;
@@ -342,12 +342,12 @@ mat-tab-group {
 
   .tab-icon-wrapper {
     margin-left: 0.25rem;
-    height: 1em;
-    width: 1em;
+    height: 1rem;
+    width: 1rem;
     mat-icon {
       height: 100%;
       width: 100%;
-      font-size: 1em;
+      font-size: 1rem;
     }
   }
 }
