--- a/src/app/util/matchup/typechart/typechart-core.component.scss
+++ b/src/app/util/matchup/typechart/typechart-core.component.scss
@@ -20,7 +20,7 @@
   border-radius: var(--pdz-shape-corner-xs);
   height: 2.5rem;
   width: 2.5rem;
-  font-size: 0.75em;
+  font-size: 0.75rem;
   font-weight: bold;
   overflow: hidden;
   &.type-colored {
@@ -71,8 +71,8 @@ th {
 
   .type-text {
     flex-shrink: 0;
-    font-size: 0.6em;
-    line-height: 1em;
+    font-size: 0.6rem;
+    line-height: 1rem;
   }
 
   .type-icon-wrapper {
@@ -156,7 +156,7 @@ tbody {
       border-radius: var(--pdz-shape-corner-xs);
       height: 1.5rem;
       width: 2.5rem;
-      font-size: 0.65em;
+      font-size: 0.65rem;
       font-weight: bold;
       overflow: hidden;
       box-shadow: var(--pdz-level-1);
@@ -172,7 +172,7 @@ tbody {
   border-radius: var(--pdz-shape-corner-xs);
   height: 2.5rem;
   width: 2.5rem;
-  font-size: 0.75em;
+  font-size: 0.75rem;
   font-weight: bold;
 }
 
@@ -183,7 +183,7 @@ tbody {
   border-radius: var(--pdz-shape-corner-xs);
   height: 1.5rem;
   width: 2.5rem;
-  font-size: 0.75em;
+  font-size: 0.75rem;
   font-weight: bold;
   overflow: hidden;
   box-shadow: var(--pdz-level-1);
