--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -129,7 +129,7 @@ $core-tokens: (
   "red-900": #540004,
   "red-950": #410002,
 
-  // Warning (Amber/Yellow)
+  // Amber/Yellow
   "amber-50": #fff8e1,
   "amber-100": #ffecb3,
   "amber-150": #ffe082,
@@ -150,7 +150,7 @@ $core-tokens: (
   "amber-900": #692a00,
   "amber-950": #4d3600,
 
-  // Success (Green)
+  // Green
   "green-50": #e8f5e9,
   "green-100": #c8e6c9,
   "green-150": #a5d6a7,
@@ -171,7 +171,49 @@ $core-tokens: (
   "green-900": #09220b,
   "green-950": #071c08,
 
-  // Info (Blue)
+  //Emerald
+  "emerald-50": #ecfdf5,
+  "emerald-100": #d1fae5,
+  "emerald-150": #bcf7db,
+  "emerald-200": #a7f3d0,
+  "emerald-250": #8bedc4,
+  "emerald-300": #6ee7b7,
+  "emerald-350": #51dda8,
+  "emerald-400": #34d399,
+  "emerald-450": #22c68d,
+  "emerald-500": #10b981,
+  "emerald-550": #0ba875,
+  "emerald-600": #059669,
+  "emerald-650": #058760,
+  "emerald-700": #047857,
+  "emerald-750": #056c4f,
+  "emerald-800": #065f46,
+  "emerald-850": #065741,
+  "emerald-900": #064e3b,
+  "emerald-950": #022c22,
+
+  //Rose
+  "rose-50": #fff1f2,
+  "rose-100": #ffe4e6,
+  "rose-150": #ffd9dd,
+  "rose-200": #fecdd3,
+  "rose-250": #feb9c1,
+  "rose-300": #fda4af,
+  "rose-350": #fc8b9a,
+  "rose-400": #fb7185,
+  "rose-450": #f85872,
+  "rose-500": #f43f5e,
+  "rose-550": #eb2e53,
+  "rose-600": #e11d48,
+  "rose-650": #d01842,
+  "rose-700": #be123c,
+  "rose-750": #af123b,
+  "rose-800": #9f1239,
+  "rose-850": #941338,
+  "rose-900": #881337,
+  "rose-950": #4c0519,
+
+  // Blue
   "blue-50": #e3f2fd,
   "blue-100": #cce9f9,
   "blue-150": #90caf9,
