--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -2,9 +2,9 @@
 
 $theme: (
   light: (
-    background: "cyan-50",
-    surface: "cyan-100",
-    surface-variant: "cyan-300",
+    background: "white",
+    surface: "gray-50",
+    surface-variant: "gray-300",
     surface-container-lowest: "white",
     surface-container-low: "gray-50",
     surface-container: "gray-100",
@@ -90,30 +90,30 @@ $theme: (
     logo-bottom: "orange-500",
     logo-background: "white",
 
-    positive: "green-700",
+    positive: "emerald-700",
     on-positive: "white",
-    positive-container: "green-100",
-    on-positive-container: "green-950",
-    negative: "red-800",
+    positive-container: "emerald-100",
+    on-positive-container: "emerald-950",
+    negative: "rose-800",
     on-negative: "white",
-    negative-container: "red-100",
-    on-negative-container: "red-950",
+    negative-container: "rose-100",
+    on-negative-container: "rose-950",
 
-    scale-positive-1: "green-100",
-    scale-positive-2: "green-200",
-    scale-positive-3: "green-300",
-    scale-positive-4: "green-400",
-    scale-positive-5: "green-500",
-    scale-positive-6: "green-600",
-    scale-positive-7: "green-700",
-    scale-neutral: "gray-100",
-    scale-negative-1: "red-100",
-    scale-negative-2: "red-200",
-    scale-negative-3: "red-300",
-    scale-negative-4: "red-400",
-    scale-negative-5: "red-500",
-    scale-negative-6: "red-600",
-    scale-negative-7: "red-700",
+    scale-positive-1: "emerald-100",
+    scale-positive-2: "emerald-200",
+    scale-positive-3: "emerald-300",
+    scale-positive-4: "emerald-400",
+    scale-positive-5: "emerald-500",
+    scale-positive-6: "emerald-600",
+    scale-positive-7: "emerald-700",
+    scale-neutral: "gray-200",
+    scale-negative-1: "rose-100",
+    scale-negative-2: "rose-200",
+    scale-negative-3: "rose-300",
+    scale-negative-4: "rose-400",
+    scale-negative-5: "rose-500",
+    scale-negative-6: "rose-600",
+    scale-negative-7: "rose-700",
 
     debug: #ff00ff,
   ),
@@ -202,29 +202,29 @@ $theme: (
     logo-bottom: "orange-500",
     logo-background: "white",
 
-    positive: "green-400",
-    on-positive: "green-950",
-    positive-container: "green-900",
-    on-positive-container: "green-100",
-    negative: "red-250",
-    on-negative: "red-950",
-    negative-container: "red-900",
-    on-negative-container: "red-100",
+    positive: "emerald-400",
+    on-positive: "emerald-950",
+    positive-container: "emerald-900",
+    on-positive-container: "emerald-100",
+    negative: "rose-250",
+    on-negative: "rose-950",
+    negative-container: "rose-900",
+    on-negative-container: "rose-100",
 
-    scale-positive-1: "green-950",
-    scale-positive-2: "green-900",
-    scale-positive-3: "green-850",
-    scale-positive-4: "green-800",
-    scale-positive-5: "green-750",
-    scale-positive-6: "green-700",
-    scale-positive-7: "green-650",
-    scale-negative-1: "red-950",
-    scale-negative-2: "red-900",
-    scale-negative-3: "red-850",
-    scale-negative-4: "red-800",
-    scale-negative-5: "red-750",
-    scale-negative-6: "red-700",
-    scale-negative-7: "red-650",
+    scale-positive-1: "emerald-950",
+    scale-positive-2: "emerald-900",
+    scale-positive-3: "emerald-850",
+    scale-positive-4: "emerald-800",
+    scale-positive-5: "emerald-750",
+    scale-positive-6: "emerald-700",
+    scale-positive-7: "emerald-650",
+    scale-negative-1: "rose-950",
+    scale-negative-2: "rose-900",
+    scale-negative-3: "rose-850",
+    scale-negative-4: "rose-800",
+    scale-negative-5: "rose-750",
+    scale-negative-6: "rose-700",
+    scale-negative-7: "rose-650",
 
     debug: #ff00ff,
   ),
