--- a/src/app/components/buttons/flat-button/flat-button.component.html
+++ b/src/app/components/buttons/flat-button/flat-button.component.html
@@ -6,7 +6,7 @@
     [queryParams]="queryParams"
     [target]="newTab ? '_blank' : undefined"
     [class.disabled]="disabled"
-    [ngClass]="'flat-button--' + theme"
+    [ngClass]="theme ? 'flat-button--' + theme : undefined"
     [title]="tooltip"
     [attr.aria-disabled]="disabled"
     [attr.aria-label]="effectiveAriaLabel"
@@ -17,7 +17,7 @@
   <button
     type="button"
     class="flat-button"
-    [ngClass]="'flat-button--' + theme"
+    [ngClass]="theme ? 'flat-button--' + theme : undefined"
     [disabled]="disabled"
     [title]="tooltip"
     [attr.aria-label]="effectiveAriaLabel"
