--- a/src/app/components/buttons/flat-button/flat-button.component.scss
+++ b/src/app/components/buttons/flat-button/flat-button.component.scss
@@ -1,42 +1,24 @@
-@mixin flat-button-theme($bg, $bg-hover, $border, $color) {
-  background-color: $bg;
-  border-color: $border;
-  color: $color;
-
-  &:hover {
-    background-color: $bg-hover;
-    box-shadow: var(--pdz-level-1);
-  }
-}
+@use "../../../../styles/mixins/buttons" as *;
+@use "../../../../styles/global" as *;
 
 .flat-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 2.5rem;
-  height: 2.5rem;
-  border-radius: var(--pdz-shape-corner-full);
-  padding: var(--pdz-space-none) var(--pdz-space-xl);
-  border: 1px solid;
-  font-size: var(--pdz-font-size-lg);
-  font-weight: bold;
-  transition:
-    background-color 0.2s,
-    box-shadow 0.2s;
+  @include flat-button-theme();
 
-  @include flat-button-theme(
-    var(--pdz-color-primary-container),
-    var(--pdz-color-primary-container-hover),
-    var(--pdz-color-primary-border),
-    var(--pdz-color-on-primary-container)
-  );
+  &--primary {
+    @include flat-button-theme(
+      pdz-color(primary-container),
+      pdz-color(primary-container-hover),
+      pdz-color(primary-border),
+      pdz-color(on-primary-container)
+    );
+  }
 
   &--secondary {
     @include flat-button-theme(
-      var(--pdz-color-secondary-container),
-      var(--pdz-color-secondary-container-hover),
-      var(--pdz-color-secondary-border),
-      var(--pdz-color-on-secondary-container)
+      pdz-color(secondary-container),
+      pdz-color(secondary-container-hover),
+      pdz-color(secondary-border),
+      pdz-color(on-secondary-container)
     );
   }
 }
